Add google+, flickr, youtube and bitbucket social links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,26 @@
                           <i class="fa fa-square fa-stack-2x"></i>
                           <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                         </span></a>
+                      <a href="https://plus.google.com/u/0/+GonzaloRobaina" title="Google+">
+                        <span class="fa-stack fa-lg">
+                          <i class="fa fa-square fa-stack-2x"></i>
+                          <i class="fa fa-google-plus fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                      <a href="http://www.flickr.com/photos/gonzalo-robaina/" title="Flickr">
+                        <span class="fa-stack fa-lg">
+                          <i class="fa fa-square fa-stack-2x"></i>
+                          <i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                      <a href="http://www.youtube.com/user/pepito2k" title="Youtube">
+                        <span class="fa-stack fa-lg">
+                          <i class="fa fa-square fa-stack-2x"></i>
+                          <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                        </span></a>
+                      <a href="https://bitbucket.org/pepito2k" title="Bitbucket">
+                        <span class="fa-stack fa-lg">
+                          <i class="fa fa-square fa-stack-2x"></i>
+                          <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
+                        </span></a>
                     </div>
                 </hgroup>
                 <div class="triangle"></div>
