--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <meta name="description" content="Sitio web personal de Gonzalo Robaina">
+        <meta name="description" content="Gonzalo's Personal Web Site">
         <meta name="viewport" content="width=device-width">
         <link rel="author" href="https://plus.google.com/115949317569784788484/posts">
+        <link href="/atom.xml" rel="alternate" title="Atom" type="application/atom+xml">
+        <link href="/sitemap.xml" rel="sitemap" title="Sitemap" type="application/xml">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
