--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,7 @@
         <link rel="author" href="https://plus.google.com/115949317569784788484/posts">
         <link href="/atom.xml" rel="alternate" title="Atom" type="application/atom+xml">
         <link href="/sitemap.xml" rel="sitemap" title="Sitemap" type="application/xml">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link href="/favicon.png" rel="shortcut icon">
 
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/main.css">
@@ -26,9 +25,7 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
         <section id="page" role="main">
-
             <header>
                 <hgroup>
                     <img id="profilePic" src="/img/gonzalo-robaina.png" alt="Gonzalo Robaina">
