--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Gonzalo Robaina's personal website">
         <meta name="author" content="Gonzalo Robaina">
-        <title>{{ site.title }}</title>
+        <title>{{ page.title }} | {{ site.title }}</title>
         <!-- Favicons-->
         <link rel="shortcut icon" href="/assets/images/favicon.png">
         <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
@@ -57,5 +57,14 @@
         <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>
         <script src="/assets/js/plugins.min.js"></script>
         <script src="/assets/js/custom.min.js"></script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-129786-12', 'auto');
+          ga('send', 'pageview');
+        </script>
     </body>
 </html>
