--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,9 @@ main {
 }
 
 footer {
-  background: rgb(33,39,40);
-  color: rgb(255,255,255);
+  /* background: rgb(33,39,40);
+  color: rgb(255,255,255); */
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
   flex: 1;
 }
 
@@ -62,4 +63,15 @@ footer {
 
 .nav-link:hover {
   color: rgb(230,230,230);
+}
+
+/*
+ * Dark mode styles
+ */
+
+@media (prefers-color-scheme: dark) {
+  main, footer {
+    background: rgb(33,39,40);
+    color: rgb(255,255,255);
+  }
 }
