--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,17 @@
 a,
 a:focus,
 a:hover {
-  color: #444;
+  color: rgb(68, 68, 68);
 }
 
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
+  color: rgb(51, 51, 51);
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: 0.05rem solid #fff;
+  background-color: rgb(255, 255, 255);
+  border: 0.05rem solid rgb(255, 255, 255);
 }
 
 /*
@@ -26,7 +26,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   border: 0;
   font-family: 'Poppins', sans-serif;
   padding: 0;
@@ -35,7 +35,7 @@ body {
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #212728;
+  color: rgb(33, 39, 40);
   text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
 }
 
@@ -51,9 +51,7 @@ main {
 }
 
 footer {
-  /* background: rgb(33,39,40);
-  color: rgb(255,255,255); */
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
+  background: rgb(255,255,255);
   flex: 1;
 }
 
