--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,28 @@ header {
 }
 
 main {
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
   flex: 10;
+  position: relative;
+}
+
+main > * {
+  z-index: 100;
+}
+
+main > canvas {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
 
 footer {
   background: rgb(255,255,255);
   flex: 1;
+}
+
+footer .btn:hover {
+  border: 1px solid rgb(68, 68, 68);
 }
 
 .nav-link {
