--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,17 @@
 a,
 a:focus,
 a:hover {
-  color: rgb(68, 68, 68);
+  color: hsl(0, 0%, 27%);
 }
 
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: rgb(51, 51, 51);
+  color: hsl(0, 0%, 20%);
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: rgb(255, 255, 255);
-  border: 0.05rem solid rgb(255, 255, 255);
+  background-color: hsl(0, 0%, 100%);
+  border: 0.05rem solid hsl(0, 0%, 100%);
 }
 
 /*
@@ -26,57 +26,72 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: hsl(0, 0%, 100%);
   border: 0;
   font-family: 'Poppins', sans-serif;
+  font-weight: 300;
   padding: 0;
 }
 
 body {
-  display: -ms-flexbox;
   display: flex;
-  color: rgb(33, 39, 40);
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+  color: hsl(189, 10%, 14%);
 }
 
 header {
-  background: rgb(255,54,78);
-  background: linear-gradient(90deg, rgba(255,54,78,1) 0%, rgba(91,4,4,1) 100%);
+  background: hsl(353, 100%, 61%);
+  background: linear-gradient(90deg, hsl(353, 100%, 61%) 0%, hsl(0, 92%, 19%) 100%);
   flex: 1;
 }
 
 main {
+  background-size: cover;
   flex: 10;
   position: relative;
 }
 
-main > * {
-  z-index: 100;
-}
-
-main > canvas {
-  height: 100%;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
+main > picture {
+  width: 70em;
 }
 
 footer {
-  background: rgb(255,255,255);
+  background: hsl(0, 0%, 100%);
   flex: 1;
   z-index: 1;
 }
 
 footer .btn:hover {
-  border: 1px solid rgb(68, 68, 68);
+  border: 1px solid hsl(0, 0%, 27%);
+  box-shadow: hsl(0, 92%, 19%) 5px 5px;
+}
+
+footer .btn:active:focus {
+  border: 1px solid hsl(0, 0%, 27%);
+  box-shadow: none;
 }
 
 .nav-link {
-  color: rgb(255,255,255);
+  color: hsl(0, 0%, 100%);
 }
 
 .nav-link:hover {
-  color: rgb(230,230,230);
+  color: hsl(0, 0%, 90%);
+}
+
+.title {
+  background-size: cover;
+  color: hsl(189, 10%, 14%);
+  height: 13em;
+  margin-bottom: 3em;
+  padding-bottom: 1em;
+}
+
+.title > h1 {
+  font-size: 3em;
+}
+
+strong, h1, h2, h3, h4, h5, h6 {
+  font-weight: 500;
 }
 
 /*
@@ -85,7 +100,11 @@ footer .btn:hover {
 
 @media (prefers-color-scheme: dark) {
   main, footer {
-    background: rgb(33,39,40);
-    color: rgb(255,255,255);
+    background: hsl(189, 10%, 14%);
+    color: hsl(0, 0%, 100%);
+  }
+
+  .title {
+    color: hsl(0, 0%, 100%);
   }
 }
