--- a/styles.css
+++ b/styles.css
@@ -65,9 +65,9 @@ footer .btn:hover {
   box-shadow: hsl(0, 92%, 19%) 5px 5px;
 }
 
-footer .btn:active:focus {
+footer .btn:active {
   border: 1px solid hsl(0, 0%, 27%);
-  box-shadow: none;
+  box-shadow: hsl(208, 38%, 85%) 3px 3px 6px 0px inset, hsla(0, 0%, 100%, 0.5) -3px -3px 6px 1px inset;
 }
 
 .nav-link {
