--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,22 +41,26 @@
   </head>
   <body>
     <div class="container-fluid p-0 d-flex flex-column justify-content-between">
-      <header class="d-flex justify-content-end align-items-center">
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/gonzalorobaina">
-              <i class="bi bi-linkedin"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/pepito2k">
-              <i class="bi bi-github"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="blog.html" class="nav-link">Blog</a>
-          </li>
-        </ul>
+      <header class="p-4 d-flex justify-content-end align-items-center">
+        <nav class="navbar navbar-light">
+          <div class="container-fluid">
+            <ul class="nav">
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.linkedin.com/in/gonzalorobaina">
+                  <i class="bi bi-linkedin"></i>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://github.com/pepito2k">
+                  <i class="bi bi-github"></i>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="blog.html" class="nav-link">Blog</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </header>
       <main class="d-flex justify-content-center">
         <picture class="d-flex justify-content-center">
