--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,10 @@ strong, h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
 }
 
+.blog-list > li {
+  list-style: none;
+}
+
 /*
  * Dark mode styles
  */
